fix homepage copy getting cut off on mobile

--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -74,6 +74,13 @@
       padding: 50px 0;
     }
 
+    .designed {
+      .copy {
+        width: auto;
+        float: none;
+      }
+    }
+
     .customize {
       .copy {
         float: none;
